Fixed return value of getLoadOfCloud func.